--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
-    <section class="bg-gradient-to-r from-blue-500 to-blue-700 hover:from-blue-600 hover:to-blue-800 text-white text-base font-bold px-10 py-4 rounded-xl shadow-md hover:shadow-lg transform hover:scale-105 transition-all duration-300 w-full text-center space-y-2">
-  <h2 class="text-xl font-bold text-white">طلای ۱۸ عیار</h2>
-  <p id="gold-price" class="text-lg">در حال بارگذاری...</p>
-  <p id="gold-change-value" class="text-sm text-white"></p>
-  <p id="gold-change-percent" class="text-sm text-white"></p>
+    <section class="bg-white rounded-xl shadow-md p-6 text-center">
+      <h2 class="text-xl font-bold text-blue-900 mb-2">طلای ۱۸ عیار</h2>
+      <p id="gold-price" class="text-lg">در حال بارگذاری...</p>
+      <small id="gold-change" class="block mt-1 text-sm text-gray-500"></small>
     </section>
 
-    <section class="bg-gradient-to-r from-blue-500 to-blue-700 hover:from-blue-600 hover:to-blue-800 text-white text-base font-bold px-10 py-4 rounded-full shadow-md hover:shadow-lg transform hover:scale-105 transition-all duration-300 w-full text-center space-y-2">
-  <h3 class="text-lg font-semibold text-white">ارزش پورتفوی من</h3>
-  <p id="portfolio-value" class="text-xl font-bold">...</p>
+    <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
+      <h3 class="text-lg font-semibold text-gray-700 mb-2">ارزش پورتفوی من</h3>
+      <p id="portfolio-value" class="text-xl font-bold">...</p>
     </section>
 
     <section id="profit-box" class="rounded-xl p-6 text-center text-white">
@@ -39,12 +38,6 @@
   </main>
 
   <script>
-    // تابع تبدیل اعداد انگلیسی به فارسی
-    function toPersianNumber(num) {
-      const persianDigits = ['۰', '۱', '۲', '۳', '۴', '۵', '۶', '۷', '۸', '۹'];
-      return num.toString().replace(/\d/g, (digit) => persianDigits[digit]);
-    }
-
     async function fetchData() {
       try {
         const response = await fetch("https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz");
@@ -54,24 +47,18 @@
         const gold18 = items.find(i => i.symbol === "IR_GOLD_18K");
 
         if (gold18) {
-          document.getElementById("gold-price").innerText = toPersianNumber(gold18.price.toLocaleString()) + " تومان";
-          document.getElementById("gold-change").innerText = `${toPersianNumber(gold18.change_value.toLocaleString())} (${toPersianNumber(gold18.change_percent)}%)`;
+          document.getElementById("gold-price").innerText = gold18.price.toLocaleString() + " تومان";
+          document.getElementById("gold-change").innerText = `${gold18.change_value.toLocaleString()} (${gold18.change_percent}%)`;
 
           const goldPrice = gold18.price;
           const totalGoldValue = (goldPrice / 750) * 750 * 278;
-          document.getElementById("portfolio-value").innerText = toPersianNumber(totalGoldValue.toLocaleString()) + " تومان";
+          document.getElementById("portfolio-value").innerText = totalGoldValue.toLocaleString() + " تومان";
 
           const change24 = gold18.change_value * 278;
           const percentChange24 = gold18.change_percent;
 
           const profitBox = document.getElementById("profit-box");
-          profitBox.innerHTML = `
-              سود/زیان ۲۴ ساعت اخیر: ${toPersianNumber(change24)} تومان
-              <br>
-              تغییر قیمت: ${toPersianNumber(change24)} تومان
-              <br>
-              درصد تغییر: ${toPersianNumber(percentChange24)}%
-          `;
+          profitBox.innerText = `سود/زیان ۲۴ ساعت اخیر: ${change24.toLocaleString()} تومان (${percentChange24}%)`;
 
           profitBox.classList.remove("bg-gray-500");
           if (change24 >= 0) {
