--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     body {
       font-family: 'Vazirmatn', sans-serif;
     }
+
+    .persian-numbers {
+      font-feature-settings: "ss01";
+      direction: rtl;
+    }
+
+    .fade-update {
+      animation: fadeIn 0.8s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0.2; transform: scale(0.97); }
+      100% { opacity: 1; transform: scale(1); }
+    }
   </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -22,22 +36,34 @@
     
     <section class="bg-white rounded-xl shadow-md p-6 text-center">
       <h2 class="text-xl font-bold text-blue-900 mb-2">طلای ۱۸ عیار</h2>
-      <p id="gold-price" class="text-lg">در حال بارگذاری...</p>
-      <small id="gold-change" class="block mt-1 text-sm text-gray-500"></small>
+      <p id="gold-price" class="text-lg persian-numbers">در حال بارگذاری...</p>
+      <small id="gold-change" class="block mt-1 text-sm text-gray-500 persian-numbers"></small>
     </section>
 
     <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
       <h3 class="text-lg font-semibold text-gray-700 mb-2">ارزش پورتفوی من</h3>
-      <p id="portfolio-value" class="text-xl font-bold">...</p>
+      <p id="portfolio-value" class="text-xl font-bold persian-numbers">...</p>
     </section>
 
-    <section id="profit-box" class="rounded-xl p-6 text-center text-white">
+    <section id="profit-box" class="rounded-xl p-6 text-center text-white persian-numbers">
       در حال محاسبه سود/زیان...
     </section>
 
   </main>
 
   <script>
+    function toPersianNumber(input) {
+      return input.toString().replace(/\d/g, d => '۰۱۲۳۴۵۶۷۸۹'[d]);
+    }
+
+    function animateElement(id, content) {
+      const el = document.getElementById(id);
+      el.classList.remove("fade-update");
+      void el.offsetWidth; // Trigger reflow
+      el.innerHTML = content;
+      el.classList.add("fade-update");
+    }
+
     async function fetchData() {
       try {
         const response = await fetch("https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz");
@@ -47,45 +73,44 @@
         const gold18 = items.find(i => i.symbol === "IR_GOLD_18K");
 
         if (gold18) {
-          document.getElementById("gold-price").innerText = gold18.price.toLocaleString() + " تومان";
-          document.getElementById("gold-change").innerText = `${gold18.change_value.toLocaleString()} (${gold18.change_percent}%)`;
+          animateElement("gold-price", toPersianNumber(gold18.price.toLocaleString()) + " تومان");
+          animateElement("gold-change", toPersianNumber(gold18.change_value.toLocaleString()) + " (" + toPersianNumber(gold18.change_percent) + "%)");
 
           const goldPrice = gold18.price;
           const totalGoldValue = (goldPrice / 750) * 750 * 278;
-          document.getElementById("portfolio-value").innerText = totalGoldValue.toLocaleString() + " تومان";
+          animateElement("portfolio-value", toPersianNumber(totalGoldValue.toLocaleString()) + " تومان");
 
           const change24 = gold18.change_value * 278;
           const percentChange24 = gold18.change_percent;
 
           const profitBox = document.getElementById("profit-box");
-          profitBox.innerText = `سود/زیان ۲۴ ساعت اخیر: ${change24.toLocaleString()} تومان (${percentChange24}%)`;
+          profitBox.classList.remove("bg-gray-500", "bg-green-500", "bg-red-500");
+          profitBox.classList.add(change24 >= 0 ? "bg-green-500" : "bg-red-500");
 
-          profitBox.classList.remove("bg-gray-500");
-          if (change24 >= 0) {
-            profitBox.classList.add("bg-green-500");
-          } else {
-            profitBox.classList.add("bg-red-500");
-          }
+          animateElement("profit-box", `
+            <div>${change24 >= 0 ? 'میزان سود ۲۴ ساعت اخیر:' : 'میزان زیان ۲۴ ساعت اخیر:'}</div>
+            <div>${toPersianNumber(Math.abs(change24).toLocaleString())} تومان</div>
+            <div>${toPersianNumber(Math.abs(percentChange24))}%</div>
+          `);
         } else {
-          document.getElementById("gold-price").innerText = "اطلاعات موجود نیست";
-          document.getElementById("portfolio-value").innerText = "نامشخص";
+          animateElement("gold-price", "اطلاعات موجود نیست");
+          animateElement("portfolio-value", "نامشخص");
           const profitBox = document.getElementById("profit-box");
-          profitBox.innerText = "اطلاعات موجود نیست";
-          profitBox.className = "rounded-xl p-6 text-center text-white bg-gray-500";
+          profitBox.className = "rounded-xl p-6 text-center text-white bg-gray-500 persian-numbers";
+          animateElement("profit-box", "اطلاعات موجود نیست");
         }
 
       } catch (err) {
         console.error("خطا:", err);
-        document.getElementById("gold-price").innerText = "خطا در دریافت";
-        document.getElementById("portfolio-value").innerText = "نامشخص";
+        animateElement("gold-price", "خطا در دریافت");
+        animateElement("portfolio-value", "نامشخص");
         const profitBox = document.getElementById("profit-box");
-        profitBox.innerText = "خطا در محاسبه سود/زیان";
-        profitBox.className = "rounded-xl p-6 text-center text-white bg-gray-500";
+        profitBox.className = "rounded-xl p-6 text-center text-white bg-gray-500 persian-numbers";
+        animateElement("profit-box", "خطا در محاسبه سود/زیان");
       }
     }
 
     fetchData();
-    setInterval(fetchData, 60000);
   </script>
 
 </body>
