--- a/index.html
+++ b/index.html
@@ -34,21 +34,22 @@
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
-    <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
-      <h2 class="text-xl font-bold text-blue-900 mb-2">قیمت طلای ۱۸ عیار</h2>
-      <p id="gold-price" class="text-lg persian-numbers">در حال بارگذاری...</p>
-      <small id="gold-change" class="block mt-1 text-sm text-gray-500 persian-numbers"></small>
-    </section>
+  <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
+     <h2 class="text-2xl font-extrabold text-blue-900 mb-2 drop-shadow">قیمت طلای ۱۸ عیار</h2>
+     <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">در حال بارگذاری...</p>
+     <small id="gold-change" class="block mt-1 text-base text-gray-600 persian-numbers drop-shadow">...</small>
+  </section>
 
-    <section class="bg-gradient-to-br from-blue-400 to-blue-100 rounded-xl shadow-md p-6 text-center">
-      <h3 class="text-lg font-semibold text-gray-700 mb-2">مقدار طلای من</h3>
-      <p id="gold-amount" class="text-xl font-bold persian-numbers">...</p>
-    </section>
+  <section class="bg-gradient-to-br from-blue-400 to-blue-100 rounded-xl shadow-md p-6 text-center">
+    <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">مقدار طلای من</h3>
+    <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
+  </section>
 
-    <section class="bg-gradient-to-br from-purple-400 to-purple-100 rounded-xl shadow-md p-6 text-center">
-      <h3 class="text-lg font-semibold text-gray-700 mb-2">ارزش پورتفوی من</h3>
-      <p id="portfolio-value" class="text-xl font-bold persian-numbers">...</p>
-    </section>
+  <section class="bg-gradient-to-br from-purple-400 to-purple-100 rounded-xl shadow-md p-6 text-center">
+    <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش پورتفوی من</h3>
+    <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
+  </section>
+
 
     <section id="profit-box" class="rounded-xl p-6 text-center text-white persian-numbers">
       در حال محاسبه سود/زیان...
@@ -92,19 +93,21 @@
 
           const profitBox = document.getElementById("profit-box");
           profitBox.classList.remove("bg-gray-500", "bg-green-500", "bg-red-500");
+
           if (change24 >= 0) {
-            profitBox.classList.add("bg-green-500");
-            animateElement("profit-box", `
-           <div>میزان سود ۲۴ ساعت اخیر:</div>
-           <div>${toPersianNumber(change24.toLocaleString())} تومان</div>
-          `);
+              profitBox.classList.add("bg-green-500");
+              animateElement("profit-box", `
+                 <div class="text-xl font-extrabold drop-shadow">میزان سود ۲۴ ساعت اخیر:</div>
+                 <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(change24.toLocaleString())} تومان</div>
+             `);
          } else {
-           profitBox.classList.add("bg-red-500");
-           animateElement("profit-box", `
-            <div>میزان ضرر ۲۴ ساعت اخیر:</div>
-            <div>${toPersianNumber(Math.abs(change24).toLocaleString())} تومان</div>
-          `);
+             profitBox.classList.add("bg-red-500");
+             animateElement("profit-box", `
+                <div class="text-xl font-extrabold drop-shadow">میزان ضرر ۲۴ ساعت اخیر:</div>
+                <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(Math.abs(change24).toLocaleString())} تومان</div>
+            `);
          }
+
 
 
           animateElement("profit-box", `
