--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
           animateElement("profit-box", `
             <div>${change24 >= 0 ? 'میزان سود ۲۴ ساعت اخیر:' : 'میزان زیان ۲۴ ساعت اخیر:'}</div>
-            <div>${toPersianNumber(Math.abs(change24).toLocaleString())} تومان</div>
+            <div>${toPersianNumber(Math.floor(Math.abs(change24)).toLocaleString())} تومان</div>
           `);
         } else {
           animateElement("gold-price", "اطلاعات موجود نیست");
