--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
-  <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
-     <h2 class="text-2xl font-extrabold text-blue-900 mb-2 drop-shadow">قیمت طلای ۱۸ عیار</h2>
-     <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">در حال بارگذاری...</p>
-     <small id="gold-change" class="block mt-1 text-base text-gray-600 persian-numbers drop-shadow">...</small>
-  </section>
+    <section class="bg-gradient-to-br from-yellow-400 to-yellow-100 rounded-xl shadow-md p-6 text-center">
+      <h2 class="text-2xl font-extrabold text-blue-900 mb-2 drop-shadow">قیمت طلای ۱۸ عیار</h2>
+      <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">در حال بارگذاری...</p>
+      <small id="gold-change" class="block mt-1 text-base text-gray-600 persian-numbers drop-shadow">...</small>
+    </section>
 
-  <section class="bg-gradient-to-br from-blue-400 to-blue-100 rounded-xl shadow-md p-6 text-center">
-    <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">مقدار طلای آبشده</h3>
-    <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
-  </section>
+    <section class="bg-gradient-to-br from-blue-400 to-blue-100 rounded-xl shadow-md p-6 text-center">
+      <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">مقدار طلای آبشده</h3>
+      <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
+    </section>
 
-  <section class="bg-gradient-to-br from-purple-400 to-purple-100 rounded-xl shadow-md p-6 text-center">
-    <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش پورتفوی</h3>
-    <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
-  </section>
-
+    <section class="bg-gradient-to-br from-purple-400 to-purple-100 rounded-xl shadow-md p-6 text-center">
+      <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش پورتفوی</h3>
+      <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
+    </section>
 
     <section id="profit-box" class="rounded-xl p-6 text-center text-white persian-numbers">
       در حال محاسبه سود/زیان...
     </section>
 
+    <!-- نمایش زمان به‌روزرسانی -->
     <p id="last-update" class="text-sm text-gray-500 text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
 
   </main>
@@ -91,35 +91,29 @@
           animateElement("portfolio-value", toPersianNumber(totalGoldValue.toLocaleString()) + " تومان");
 
           const change24 = gold18.change_value * myGoldGrams;
-          const percentChange24 = gold18.change_percent;
 
           const profitBox = document.getElementById("profit-box");
           profitBox.classList.remove("bg-gray-500", "bg-green-500", "bg-red-500");
 
           if (change24 >= 0) {
-              profitBox.classList.add("bg-green-500");
-              animateElement("profit-box", `
-                 <div class="text-2xl font-extrabold drop-shadow">میزان سود ۲۴ ساعت اخیر:</div>
-                 <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(Math.floor(change24).toLocaleString())} تومان</div>
-             `);
-         } else {
-             profitBox.classList.add("bg-red-500");
-             animateElement("profit-box", `
-                <div class="text-2xl font-extrabold drop-shadow">میزان ضرر ۲۴ ساعت اخیر:</div>
-                <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(Math.floor(Math.abs(change24)).toLocaleString())} تومان</div>
+            profitBox.classList.add("bg-green-500");
+            animateElement("profit-box", `
+              <div class="text-2xl font-extrabold drop-shadow">میزان سود ۲۴ ساعت اخیر:</div>
+              <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(Math.floor(change24).toLocaleString())} تومان</div>
             `);
-           const now = new Date();
-           const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
-           const formattedTime = toPersianNumber(now.toLocaleTimeString("fa-IR").replace(/:\d+$/, ''));
-           document.getElementById("last-update").innerText = `آخرین به‌روزرسانی: ${formattedDate} ساعت ${formattedTime}`;
-         }
+          } else {
+            profitBox.classList.add("bg-red-500");
+            animateElement("profit-box", `
+              <div class="text-2xl font-extrabold drop-shadow">میزان ضرر ۲۴ ساعت اخیر:</div>
+              <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(Math.floor(Math.abs(change24)).toLocaleString())} تومان</div>
+            `);
+          }
 
-
-
-          animateElement("profit-box", `
-             <div class="text-lg font-semibold drop-shadow">${change24 >= 0 ? 'میزان سود ۲۴ ساعت اخیر:' : 'میزان ضرر ۲۴ ساعت اخیر:'}</div>
-             <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(Math.floor(Math.abs(change24)).toLocaleString())} تومان</div>
-         `);
+          // زمان به‌روزرسانی
+          const now = new Date();
+          const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
+          const formattedTime = toPersianNumber(now.toLocaleTimeString("fa-IR").replace(/:\d+$/, ''));
+          document.getElementById("last-update").innerText = `آخرین به‌روزرسانی: ${formattedDate} ساعت ${formattedTime}`;
 
         } else {
           animateElement("gold-price", "اطلاعات موجود نیست");
