--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     در حال محاسبه سود/زیان...
   </section>
 
+  <!-- نمایش زمان به‌روزرسانی -->
+  <p id="last-update" class="text-sm text-gray-500 text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
+
   </main>
 
   <script>
@@ -106,6 +109,10 @@
               <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(Math.floor(Math.abs(change24)).toLocaleString())} تومان</div>
             `);
           }
+          const now = new Date();
+          const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
+          const formattedTime = toPersianNumber(now.toLocaleTimeString("fa-IR").replace(/:\d+$/, ''));
+          document.getElementById("last-update").innerText = `آخرین به‌روزرسانی: ${formattedDate} ساعت ${formattedTime}`;
 
         } else {
           animateElement("gold-price", "اطلاعات موجود نیست");
