--- a/index.html
+++ b/index.html
@@ -98,24 +98,30 @@
           const totalGoldValue = ((goldPrice - commission) * goldPurity / 750 ) * myGoldGrams;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()) + " تومان");
 
-          const change24 = gold18.change_value * myGoldGrams * (goldPurity / 750);
-
           const profitBox = document.getElementById("profit-box");
-          profitBox.classList.remove("bg-gray-500", "bg-green-500", "bg-red-500");
+          profitBox.className = "rounded-xl p-6 text-center text-white bg-purple-500 persian-numbers";
 
-          if (change24 >= 0) {
-            profitBox.classList.add("bg-green-500");
-            animateElement("profit-box", `
-              <div class="text-2xl font-extrabold drop-shadow">میزان سود ۲۴ ساعت اخیر:</div>
-              <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(Math.floor(change24).toLocaleString())} تومان</div>
-            `);
-          } else {
-            profitBox.classList.add("bg-red-500");
-            animateElement("profit-box", `
-              <div class="text-2xl font-extrabold drop-shadow">میزان ضرر ۲۴ ساعت اخیر:</div>
-              <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(Math.floor(Math.abs(change24)).toLocaleString())} تومان</div>
-            `);
-          }
+          try {
+                const total = 10000;
+                const ayarResponse = await fetch("https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1");
+                const symbols = await ayarResponse.json();
+                const ayar = symbols.find(i => i.l18 === "عیار");
+
+                if (ayar && ayar.pc) {
+                   const result = total * ayar.pc;
+                   animateElement("profit-box", `
+                        <div class="text-2xl font-extrabold drop-shadow">ارزش دارایی معادل ${toPersianNumber(total)} واحد:</div>
+                        <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(result.toLocaleString())} تومان</div>
+                 `);
+                } else {
+                   animateElement("profit-box", "صندوق عیار یافت نشد");
+                }
+           } catch (err) {
+                   console.error("خطا در دریافت اطلاعات صندوق عیار:", err);
+                   animateElement("profit-box", "خطا در دریافت قیمت صندوق");
+           }
+
+
           const now = new Date();
           const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
           const formattedTime = toPersianNumber(now.toLocaleTimeString("fa-IR").replace(/:\d+$/, ''));
