--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </section>
 
   <section class="bg-gradient-to-br from-purple-400 to-purple-100 rounded-xl shadow-md p-6 text-center">
-    <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش پورتفوی</h3>
+    <h3 id="portfolio-title" class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش پورتفوی</h3>
     <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
   </section>
 
@@ -94,7 +94,8 @@
           const myGoldGrams = 438.44;
           const goldPurity = 750;
           const commission = 30000;
-
+          
+          document.getElementById("portfolio-title").innerText = `ارزش طلای آبشده معادل ${toPersianNumber(myGoldGrams.toLocaleString())} گرم:`;
           animateElement("gold-amount", toPersianNumber(myGoldGrams.toLocaleString()) + " گرم");
 
           const totalGoldValue = ((goldPrice - commission) * goldPurity / 750 ) * myGoldGrams;
