--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </section>
 
   <section class="bg-gradient-to-br from-purple-400 to-purple-100 rounded-xl shadow-md p-6 text-center">
-    <h3 id="portfolio-title" class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش پورتفوی</h3>
+    <h3 id="portfolio-title" class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش طلای آبشده</h3>
     <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
   </section>
 
@@ -47,7 +47,7 @@
   </section>
 
   <section class="bg-gradient-to-br from-blue-400 to-blue-100 rounded-xl shadow-md p-6 text-center">
-    <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">مقدار طلای آبشده</h3>
+    <h3 class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">دارایی کل</h3>
     <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
   </section>
 
@@ -96,8 +96,7 @@
           const commission = 30000;
           
           document.getElementById("portfolio-title").innerText = `ارزش طلای آبشده معادل ${toPersianNumber(myGoldGrams.toLocaleString())} گرم:`;
-          animateElement("gold-amount", toPersianNumber(myGoldGrams.toLocaleString()) + " گرم");
-
+          animateElement("gold-amount");
           const totalGoldValue = ((goldPrice - commission) * goldPurity / 750 ) * myGoldGrams;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()) + " تومان");
 
