--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <section class="bg-gradient-to-br from-purple-400 to-purple-100 rounded-xl shadow-md p-6 text-center">
     <h3 id="portfolio-title" class="text-xl font-extrabold text-gray-800 mb-2 drop-shadow">ارزش طلای آبشده</h3>
     <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-gray-800 drop-shadow">...</p>
+    <!-- سطر جدید برای نمایش قیمت پایانی و درصد تغییر -->
+    <div id="price-change" class="mt-2 text-gray-600 text-lg"></div>
   </section>
 
   <section id="profit-box" class="rounded-xl p-6 text-center text-white persian-numbers">
@@ -86,9 +88,7 @@
           let percent = gold18.change_percent;
           let valueStr = (value < 0 ? "-" : "") + Math.abs(value).toLocaleString();
           let percentStr = (percent < 0 ? "-" : "") + Math.abs(percent);
-          let valueText = toPersianNumber(valueStr);
-          let percentText = toPersianNumber(percentStr);
-          animateElement("gold-change", valueText + " (%" + percentText + ")");
+          animateElement("gold-change", valueStr + " (%" + percentStr + ")");
           
           const goldPrice = gold18.price;
           const myGoldGrams = 438.44;
@@ -117,7 +117,7 @@
                    // مقدار پورتفوی با گرم در پرانتز
                    animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()) + " تومان");
 
-                   animateElement("profit-box", `
+                   animateElement("profit-box", `  
                         <div class="text-2xl font-extrabold drop-shadow">ارزش صندوق عیار معادل ${toPersianNumber(total)} واحد:</div>
                         <div class="text-2xl font-extrabold drop-shadow">${toPersianNumber(result.toLocaleString())} تومان</div>
                    `);
@@ -128,6 +128,12 @@
                console.error("خطا در دریافت اطلاعات صندوق عیار:", err);
                animateElement("profit-box", "خطا در دریافت قیمت صندوق");
            }
+
+          // نمایش قیمت پایانی و درصد تغییر نسبت به روز گذشته در سطر جدید
+          const finalPrice = gold18.pc;
+          const changePercent = gold18.change_percent;
+          const priceChangeText = `قیمت پایانی: ${toPersianNumber(finalPrice.toLocaleString())} تومان | درصد تغییر: ${toPersianNumber(changePercent.toFixed(2))}%`;
+          animateElement("price-change", priceChangeText);
 
           const now = new Date();
           const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
